--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -17,3 +17,16 @@
 .top-bar .button-group {
     margin-bottom: 0;
 }
+
+.herobar {
+    background-color: #074E68;
+    color: #fff;
+    text-align: center;
+}
+
+.herobar h1 {
+    font-size: 2.875rem;
+    color: #fefefe;
+    font-weight: 200;
+    text-align: center;
+}
