Finishes styling bottom bar

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <th:block th:replace="partials/header :: includes" />
+    <title>Pillowing Bank - Admin</title>
 </head>
 <body>
 <th:block th:replace="partials/header :: topbar('Pillowing Bank - Admin')" />
