--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -29,4 +29,36 @@
     color: #fefefe;
     font-weight: 200;
     text-align: center;
+    margin-bottom: 2rem;
+}
+
+.footer {
+    background-color: #272932;
+    padding: 2rem 4rem;
+    margin-top: 2rem;
+    text-align: center;
+    color: #fff;
+}
+
+.footer-links {
+    list-style-type: none;
+}
+
+.footer-links a {
+    text-decoration: none;
+}
+
+.footer-links a, .footer p {
+    font-weight: 300;
+    font-size: 0.8em;
+    color: #fff;
+}
+
+.footer h4 {
+    color: #fff;
+    font-size: 1em;
+    font-weight: 400;
+    text-transform: uppercase;
+    margin-top: 2.5rem;
+    margin-bottom: 10px;
 }
