Adds admin controller and some styling for the hero bar

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -5,11 +5,9 @@
     <title>Pillowing Bank - Admin</title>
 </head>
 <body>
-<th:block th:replace="partials/header :: topbar('Pillowing Bank - Admin')" />
+<th:block th:replace="partials/header :: topbar('Pillowing Bank - Admin', true)" />
 <div class="row">
     <div class="small-12 column">
-        <h1>Pillowing Bank - Admin</h1>
-
     </div>
 </div>
 <th:block th:replace="partials/footer :: footer" />
