--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -22,14 +22,49 @@
     background-color: #074E68;
     color: #fff;
     text-align: center;
+    position: relative;
+    padding-bottom: 0.5rem;
+    margin-bottom: 2rem;
 }
 
+.herobar.withnav {
+    padding-bottom: 2rem;
+}
 .herobar h1 {
     font-size: 2.875rem;
     color: #fefefe;
     font-weight: 200;
     text-align: center;
-    margin-bottom: 2rem;
+}
+
+
+.herobar ul.nav {
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    float: none;
+    margin: 1rem auto 0 auto;
+    width: 100%;
+}
+
+.herobar ul.nav li {
+    display: inline-block;
+    float: none;
+}
+
+.herobar ul.nav li a {
+    color: #fff;
+    display: block;
+    font-size: 12px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    padding: 0.9rem 1rem 0.75rem;
+    text-transform: uppercase;
+}
+
+.herobar ul.nav li a:hover {
+    background: rgba(255,255,255,0.15);
+    transition: all .25s ease-in-out;
 }
 
 .footer {
