--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -5,7 +5,7 @@
     <title>Pillowing Bank - Login</title>
 </head>
 <body>
-    <th:block th:replace="partials/header :: topbar('Pillowing Bank - Login')" />
+    <th:block th:replace="partials/header :: topbar('Pillowing Bank - Login', false)" />
     <div class="row">
         <div class="small-4 small-centered column">
             <form th:action="@{/login}" method="POST">
