--- a/src/main/resources/templates/admin/list-users.html
+++ b/src/main/resources/templates/admin/list-users.html
@@ -2,59 +2,43 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <th:block th:replace="partials/header :: includes" />
-    <title>Pillowing Bank - Add Staff</title>
+    <title>Pillowing Bank - Staff</title>
 </head>
 <body th:inline="text">
-<th:block th:replace="partials/header :: topbar('Pillowing Bank - Add Staff', true, 'user')" />
+<th:block th:replace="partials/header :: topbar('Pillowing Bank - Staff', true, 'user')" />
 <div class="row">
-    <div class="small-5 small-centered column">
-        <th:block th:if="${__${ACTION}__} eq ${@constantService.get('ACTION_ADD_SUBMIT')}">
-
-            <div class="callout success" th:if="${__${STATUS}__} eq ${@constantService.get('STATUS_SUCCESS')}">
-                Successfully added user [[${user_username}]] with email address [[${user_email}]].
-            </div>
-
-            <div class="callout alert" th:if="${__${STATUS}__} eq ${@constantService.get('STATUS_FAILURE')}">
-
-                <th:block th:if="${__${ERROR}__} eq ${@constantService.get('ERROR_DUPLICATE_KEY')}">
-                    A staff member with the given name or email address already exists.
-                </th:block>
-
-                <th:block th:if="${__${ERROR}__} eq ${@constantService.get('ERROR_UNKNOWN')}">
-                    An unknown error has occurred.
-                </th:block>
-
-            </div>
-
-        </th:block>
-        <form th:action="@{/admin/user/add}" th:object="${userForm}" method="post">
-            <label for="username">Name</label>
-            <input type="text"
-                   id="username"
-                   th:field="*{username}"
-                   data-focus="true"
-                   placeholder="Username"/>
-
-            <label for="userEmail">Email</label>
-            <input type="text"
-                   id="userEmail"
-                   th:field="*{email}"
-                   placeholder="somebody@somewhere.com"/>
-
-            <label for="userPassword">Password</label>
-            <input type="password"
-                   id="userPassword"
-                   th:field="*{password}"
-                   placeholder="Password"/>
-            <fieldset>
-                <legend>Roles</legend>
-                <input type="checkbox" id="role_admin" th:field="*{isAdmin}" /><label for="role_admin">Admin</label>
-                <input type="checkbox" id="role_mod" th:field="*{isMod}" /><label for="role_mod">Moderator</label>
-                <input type="checkbox" id="role_guest" th:field="*{isGuestArtist}" /><label for="role_guest">Guest Artist</label>
-            </fieldset>
-            <input type="hidden" th:field="*{isActive}" />
-            <input type="submit" class="button expanded" value="Create Staff Member" />
-        </form>
+    <div class="small-7 column small-centered">
+        <a th:href="@{/admin/user/add}" class="button"><i class="fa fa-plus"></i> Add User</a>
+        <table>
+            <thead>
+                <tr>
+                    <th>
+                        User
+                    </th>
+                    <th>
+                        Email
+                    </th>
+                    <th>
+                        Active?
+                    </th>
+                    <th>
+                        Roles
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="user,iterationStatus : ${users}">
+                    <td th:text="${user.username}"></td>
+                    <td th:text="${user.email}"></td>
+                    <td th:text="${user.active == 1 ? 'Yes' : 'No'}"></td>
+                    <td>
+                        <th:block th:each="role : ${user.roles}">
+                            <th:block th:text="${#strings.capitalize(#strings.toLowerCase(role.role))}" /><th:block th:if="${!roleStat.last}">, </th:block>
+                        </th:block>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
 <th:block th:replace="partials/footer :: footer" />
