--- a/src/main/resources/templates/admin/add-item.html
+++ b/src/main/resources/templates/admin/add-item.html
@@ -2,22 +2,22 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <th:block th:replace="partials/header :: includes" />
-    <title>Pillowing Bank - Add Client</title>
+    <title>Pillowing Bank - Add Item</title>
 </head>
 <body th:inline="text">
-<th:block th:replace="partials/header :: topbar('Pillowing Bank - Add Client', true, 'client')" />
+<th:block th:replace="partials/header :: topbar('Pillowing Bank - Add Item', true, 'item')" />
 <div class="row">
     <div class="small-7 small-centered column">
         <th:block th:if="${__${ACTION}__} eq ${@constantService.get('ACTION_ADD_SUBMIT')}">
 
             <div class="callout success" th:if="${__${STATUS}__} eq ${@constantService.get('STATUS_SUCCESS')}">
-                Successfully added client with name [[${client_name}]]!
+                Successfully added item with name [[${item_name}]]!
             </div>
 
             <div class="callout alert" th:if="${__${STATUS}__} eq ${@constantService.get('STATUS_FAILURE')}">
 
                 <th:block th:if="${__${ERROR}__} eq ${@constantService.get('ERROR_DUPLICATE_KEY')}">
-                    A client with the name [[${client_name}]] already exists.
+                    An item with the name [[${item_name}]] already exists.
                 </th:block>
 
                 <th:block th:if="${__${ERROR}__} eq ${@constantService.get('ERROR_UNKNOWN')}">
@@ -27,15 +27,15 @@
             </div>
 
         </th:block>
-        <form th:action="@{/admin/client/add}" th:object="${client}" method="post">
-            <label for="clientName">Client Name</label>
+        <form th:action="@{/admin/item/add}" th:object="${item}" method="post">
+            <label for="itemName">Item Name</label>
             <input type="text"
-                   id="clientName"
+                   id="itemName"
                    th:field="*{name}"
                    data-focus="true"
-                   placeholder="DeviantArt Username"/>
+                   placeholder="Item Name"/>
 
-            <input type="submit" class="button expanded" value="Create Client" />
+            <input type="submit" class="button expanded" value="Create Item" />
         </form>
     </div>
 </div>
