--- a/src/main/resources/templates/partials/header.html
+++ b/src/main/resources/templates/partials/header.html
@@ -8,6 +8,7 @@
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/what-input/4.0.6/what-input.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/js/foundation.min.js"></script>
+        <script type="text/javascript" th:src="@{/js/editTable.js}"></script>
         <script type="text/javascript" th:src="@{/js/app.js}"></script>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     </th:block>
