Adds promise polyfill and promise support to editTable.js. Initial support for item types.

--- a/src/main/resources/templates/admin/client/view-client.html
+++ b/src/main/resources/templates/admin/client/view-client.html
@@ -11,11 +11,12 @@
                     return oldValues;
                 if (newValues.quantity == 0)
                     $("tr[data-te-row-id='" + rowId + "']").remove();
-                return newValues;
+                return new Promise(function(resolve, reject){
+                    setTimeout()
+                });
             });
         });
         /*]]>*/
-
     </script>
 </head>
 <body th:inline="text">
