--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -118,8 +118,9 @@ td input, td input[type='text'], td .button {
 }
 
 td input[type='text'] {
-    padding: 0.75rem;
-    height: 1rem;
+    padding-top:0;
+    padding-bottom:0;
+    height: 1.70rem;
 }
 
 td.text-right input[type='text'] {
