Adds currency viewing and adding functionality to item list view. fixes #3

--- a/src/main/resources/templates/admin/item/add-item.html
+++ b/src/main/resources/templates/admin/item/add-item.html
@@ -27,7 +27,8 @@
             </div>
 
         </th:block>
-        <form th:action="@{/admin/item/add}" th:object="${item}" method="post">
+        <form th:action="@{''}" th:object="${item}" method="post">
+            <input type="hidden" th:field="*{itemType}" />
             <label for="itemName">Item Name</label>
             <input type="text"
                    id="itemName"
