Adds item name edit functionality for administrators. Fixes #4

--- a/src/main/resources/templates/admin/client/view-client.html
+++ b/src/main/resources/templates/admin/client/view-client.html
@@ -96,7 +96,7 @@
                             });
                             $(".sa-confirm-button-container button.confirm").focus();
                         } else {
-                            swal("Loading", "Please Wait. . .");
+                            swal("Hold On", "Loading, please wait. . .");
                             doContinue();
                         }
                     };
